fix z-index map info bug

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -168,3 +168,4 @@ h1
   right: 0
   padding: rhythm(.5)
   background: rgba($light,.85)
+  z-index: 500
